<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <POU Name="P_1Start" Id="{fc2519c9-1115-49a1-8835-254105b865d4}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM P_1Start
VAR
	nState: INT;
	
END_VAR

VAR CONSTANT
	//Here we define our constant where we want the different positon to be. This is instead of making steps you can call this fixed steps.
	Standby    : INT := 00;
	Start		:INT := 01;
	atEntry    : INT := 10;
	Moving     : INT := 20;
	MovingStop : INT := 22;
	Waiting    : INT := 30;
	Stopping   : INT := 40;
	Resetting  : INT := 50;
	Estop      : INT := 99;
		
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[// This is our first program in the program we have made a state mashine  ( Case ... of ) to define what our system should do
// in the different states.



CASE nState OF
	Standby:		
		IF FIO.bEbStart=TRUE THEN
			FIO.bInEmitBase:=TRUE;
			nState:=Start;
		END_IF
		
	Start: // This is where we declair what should happen if a operator have turned the mashine in auto and pressed start.
			FIO.bInEmitBlueLid:=FALSE;
			FIO.bInEmitGreenLid:=FALSE;
			FIO.bInEmitMetalLid:=FALSE;
			
			
		IF FIO.bEbStart=TRUE AND FIO.bEbAuto=TRUE THEN 
			FIO.bInEmitBlueLid:=TRUE;     //Lids will start to spawn 
			FIO.bInEmitGreenLid:=TRUE;
			FIO.bInEmitMetalLid:=TRUE;
			nState:=Moving;
		END_IF

	Moving:	 //when the lids 
		IF FIO.bInEmitBlueLid=TRUE AND FIO.bInPaSensBlue=FALSE THEN
			FIO.bInConvBlue:=TRUE;       
		END_IF
		IF	FIO.bInEmitGreenLid=TRUE AND FIO.bInPaSensGreen=FALSE THEN
			FIO.bInConvGreen:=TRUE;
		END_IF
		IF FIO.bInEmitMetalLid=TRUE AND FIO.bInPaSensMetal=FALSE THEN
			FIO.bInConvMetal:=TRUE;
		END_IF	
			nState:=MovingStop;
			
	MovingStop:		
	 	IF FIO.bInPaSensBlue=TRUE THEN  
			FIO.bInConvBlue:=FALSE;
		END_IF
		IF FIO.bInPaSensGreen=TRUE THEN	
			FIO.bInConvGreen:=FALSE;
		END_IF	
		IF FIO.bInPaSensMetal=TRUE THEN	
			FIO.bInConvMetal:=FALSE;
		END_IF		
			nState := Waiting;			

		
//----------------------------------------------------------------------------//
	Waiting:
			nState:=Moving;
		
//----------------------------------------------------------------------------//
	Stopping:   //when stop is pressed we move into this statement the stop light turn on / This is also the state we start in when we turn on the PLC /System
		IF FIO.bEbStop = FALSE THEN
			FIO.bEbStopLight:=TRUE;
			FIO.bInEmitBase:=FALSE;
		ELSIF FIO.bEbReset=TRUE THEN
			FIO.bEbStopLight:=FALSE;
			nState:=Standby;	
		END_IF
//----------------------------------------------------------------------------//
			
			
		
//----------------------------------------------------------------------------// 			
	ELSE
			nState:=9999;				
END_CASE

IF NOT FIO.bEbStop THEN  
		nState:=Stopping;	
END_IF
]]></ST>
    </Implementation>
    <LineIds Name="P_1Start">
      <LineId Id="375" Count="0" />
      <LineId Id="396" Count="0" />
      <LineId Id="376" Count="0" />
      <LineId Id="212" Count="0" />
      <LineId Id="28" Count="0" />
      <LineId Id="5" Count="0" />
      <LineId Id="397" Count="1" />
      <LineId Id="410" Count="0" />
      <LineId Id="400" Count="1" />
      <LineId Id="399" Count="0" />
      <LineId Id="203" Count="0" />
      <LineId Id="270" Count="3" />
      <LineId Id="206" Count="0" />
      <LineId Id="355" Count="0" />
      <LineId Id="275" Count="0" />
      <LineId Id="34" Count="0" />
      <LineId Id="32" Count="0" />
      <LineId Id="305" Count="0" />
      <LineId Id="36" Count="0" />
      <LineId Id="38" Count="0" />
      <LineId Id="66" Count="0" />
      <LineId Id="324" Count="0" />
      <LineId Id="187" Count="0" />
      <LineId Id="325" Count="1" />
      <LineId Id="188" Count="0" />
      <LineId Id="327" Count="0" />
      <LineId Id="329" Count="0" />
      <LineId Id="74" Count="0" />
      <LineId Id="328" Count="0" />
      <LineId Id="42" Count="0" />
      <LineId Id="82" Count="0" />
      <LineId Id="81" Count="0" />
      <LineId Id="44" Count="0" />
      <LineId Id="193" Count="0" />
      <LineId Id="330" Count="0" />
      <LineId Id="333" Count="0" />
      <LineId Id="196" Count="0" />
      <LineId Id="334" Count="0" />
      <LineId Id="331" Count="0" />
      <LineId Id="240" Count="0" />
      <LineId Id="332" Count="0" />
      <LineId Id="157" Count="0" />
      <LineId Id="169" Count="0" />
      <LineId Id="168" Count="0" />
      <LineId Id="167" Count="0" />
      <LineId Id="166" Count="0" />
      <LineId Id="88" Count="0" />
      <LineId Id="116" Count="0" />
      <LineId Id="86" Count="0" />
      <LineId Id="406" Count="2" />
      <LineId Id="415" Count="0" />
      <LineId Id="412" Count="0" />
      <LineId Id="416" Count="0" />
      <LineId Id="409" Count="0" />
      <LineId Id="92" Count="0" />
      <LineId Id="437" Count="0" />
      <LineId Id="441" Count="0" />
      <LineId Id="402" Count="0" />
      <LineId Id="436" Count="0" />
      <LineId Id="403" Count="0" />
      <LineId Id="89" Count="0" />
      <LineId Id="93" Count="0" />
      <LineId Id="25" Count="0" />
      <LineId Id="95" Count="0" />
      <LineId Id="127" Count="0" />
      <LineId Id="323" Count="0" />
      <LineId Id="322" Count="0" />
      <LineId Id="97" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>